Fix overflowing join input

--- a/css/_responsive.scss
+++ b/css/_responsive.scss
@@ -37,7 +37,7 @@
                     padding-right: 0;
 
                     .enter-room-input {
-                        width: 150%;
+                        width: 100%;
                     }
                 }
 
